@@ -438,6 +438,7 @@ internal static partial class Interop
         /// </summary>
         /// <param name="path">Path to the file.</param>
         /// <param name="buf"><see cref="Stat"/> on 32 bit systems and <see cref="Stat64"/> on 64 bit systems.</param>
+        /// <returns>On success, 0. On failure, -1, and errno is set.</returns>
         [DllImport(Libraries.Libc, SetLastError = true)]
         public static extern int stat(string path, out Stat buf);
 
@@ -447,6 +448,7 @@ internal static partial class Interop
         /// </summary>
         /// <param name="path">Path to the file.</param>
         /// <param name="buf"><see cref="Stat64"/>.</param>
+        /// <returns>On success, 0. On failure, -1, and errno is set.</returns>
         [DllImport(Libraries.Libc, SetLastError = true)]
         public static extern int stat64(string path, out Stat64 buf);
     }
